only html outline of nav bar stuff

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,13 +2,30 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Weather app</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Weather Tracker</title>
         <link rel="stylesheet" href="/static/css/styles.css">
     </head>
-
     <body>
-        <p>
-            Test to see if working
-        </p>
+        <header>
+            <nav>
+                <a href="index.html" class="weather_logo">The Weather App</a>
+                <input type="search" id="search_bar" name="query" placeholder="Search City or Zip Code">
+                <button>Change Region or Units</button>
+                <button class="go_premium">Go Premium</button>
+                <button class="sign_up">Sign Up</button>
+                <button class="hamburger_menu">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </button>
+            </nav>
+        </header>
+        <main>
+            <p>Main content</p>
+        </main>
+        <footer>
+            <p>Links i guess or head back to top of website</p>
+        </footer>
     </body>
 </html>
