added some css styles to nav bar

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,10 +8,10 @@
     </head>
     <body>
         <header>
-            <nav>
-                <a href="index.html" class="weather_logo">The Weather App</a>
-                <input type="search" id="search_bar" name="query" placeholder="Search City or Zip Code">
-                <button>Change Region or Units</button>
+            <nav class="first_nav">
+                <button class="weather_logo">The<br>Weather<br>Channel</button>
+                <input type="search" name="query" placeholder="Search City or Zip Code">
+                <button class="change_units">Change Region or Units</button>
                 <button class="go_premium">Go Premium</button>
                 <button class="sign_up">Sign Up</button>
                 <button class="hamburger_menu">
