--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,3 +1,67 @@
 body {
-    color: aqua;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.weather_logo {
+    text-decoration: none;
+    border: 1px solid black;
+    background-color: white;
+    color: rgb(5, 5, 65);
+    margin-left: 5vw;
+    margin-right: 10%;
+    margin-top: 1vh;
+    margin-bottom: 1vh;
+    cursor: pointer;
+    text-align: left;
+    line-height: 15px;
+    padding: 20px 5px 5px 5px;
+}
+
+input[type="search"] {
+    padding: 20px 5px 5px 5px;
+    margin: 0;
+    width: 30vw;
+    align-self: center;
+    border-radius: 5%;
+}
+
+input[type="search"]::-webkit-search-cancel-button {
+    display: none;
+}
+
+nav {
+    background-color: rgb(5, 5, 65);
+    margin: 0;
+    padding: 0;
+    display: flex;
+}
+
+.go_premium,
+.sign_up,
+.hamburger_menu,
+.change_units {
+    float: right;
+    cursor: pointer;
+    align-self: center;
+}
+
+.sign_up {
+    background-color: rgb(5, 5, 65);
+    color: white;
+    font-weight: 550;
+    border: 1px solid white;
+    border-radius: 15%;
+    width: 5vw;
+    height: auto;
+    padding: 2px;
+}
+
+.go_premium {
+    color: rgb(5, 5, 65);
+    background-color: white;
+    border-radius: 15%;
+    width: 6.5vw;
+    padding: 2px;
 }
