general structure of weather app

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,21 @@
             </nav>
         </header>
         <main>
-            <p>Main content</p>
+            <section class="weather_summary">
+                <div class="location_time">
+                    <h1>Berkeley, CA <span>As of 2:25 pm PST</span></h1>
+                </div>
+
+                <div class="current_conditions">
+                    <h1 class="temperature">55°</h1>
+                    <p class="conditions">Partly Cloudy</p>
+                    <p class="high-low">Day 55° • Night 44°</p>
+                </div>
+                
+                <div class="weather_image">
+                    <img class="current_conditions_image" src="/static/images/partly_cloudy.webp" alt="Partly Cloudy Icon">
+                </div>
+            </section>
         </main>
         <footer>
             <p>Links i guess or head back to top of website</p>
