--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -4,6 +4,7 @@ body {
     box-sizing: border-box;
 }
 
+/* Top Navigation Bar */
 .weather_logo {
     text-decoration: none;
     border: 1px solid black;
@@ -24,7 +25,7 @@ input[type="search"] {
     margin: 0;
     width: 30vw;
     align-self: center;
-    border-radius: 5%;
+    border-radius: 5;
 }
 
 input[type="search"]::-webkit-search-cancel-button {
@@ -52,7 +53,7 @@ nav {
     color: white;
     font-weight: 550;
     border: 1px solid white;
-    border-radius: 15%;
+    border-radius: 5px;
     width: 5vw;
     height: auto;
     padding: 2px;
@@ -64,4 +65,40 @@ nav {
     border-radius: 15%;
     width: 6.5vw;
     padding: 2px;
+}
+
+/* Weather Summary Banner */
+.weather_summary {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    border: 1px solid black;
+    border-radius: 5px;
+    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
+    margin: 5% 20% 5% 15%;
+    padding: 1%;
+}
+
+.temperature {
+    font-size: 50px;
+    font-weight: normal;
+}
+
+.location_time {
+    border-bottom: 1px;
+    justify-content: space-between;
+}
+
+.location_time h1 {
+    font-weight: normal;
+}
+
+.weather_image {
+    float: right;
+}
+
+.current_conditions_image {
+    width: 200px;
+    align-items: right;
+    height: auto;
 }
