--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -71,7 +71,7 @@ nav {
 .weather_summary {
     display: flex;
     justify-content: space-between;
-    flex-direction: column;
+    flex-direction: row;
     border: 1px solid black;
     border-radius: 5px;
     box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
@@ -84,21 +84,8 @@ nav {
     font-weight: normal;
 }
 
-.location_time {
-    border-bottom: 1px;
-    justify-content: space-between;
-}
-
-.location_time h1 {
-    font-weight: normal;
-}
-
-.weather_image {
-    float: right;
-}
-
 .current_conditions_image {
     width: 200px;
-    align-items: right;
+    margin-left: auto;
     height: auto;
 }
