general structure and format complete

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
         <header>
             <nav class="first_nav">
                 <button class="weather_logo">The<br>Weather<br>Channel</button>
-                <input type="search" name="query" placeholder="Search City or Zip Code">
+                <input type="search" class="search_bar" name="query" placeholder="Search City or Zip Code">
                 <button class="change_units">Change Region or Units</button>
                 <button class="go_premium">Go Premium</button>
                 <button class="sign_up">Sign Up</button>
