--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -25,12 +25,15 @@ input[type="search"] {
     margin: 0;
     width: 30vw;
     align-self: center;
-    border-radius: 5;
+    border-radius: 10px;
+    text-align: center;
 }
 
 input[type="search"]::-webkit-search-cancel-button {
     display: none;
 }
+
+
 
 nav {
     background-color: rgb(5, 5, 65);
@@ -43,9 +46,13 @@ nav {
 .sign_up,
 .hamburger_menu,
 .change_units {
-    float: right;
+    margin-left: auto;
     cursor: pointer;
     align-self: center;
+}
+
+.change_units {
+    border-radius: 8px;
 }
 
 .sign_up {
@@ -53,7 +60,7 @@ nav {
     color: white;
     font-weight: 550;
     border: 1px solid white;
-    border-radius: 5px;
+    border-radius: 8px;
     width: 5vw;
     height: auto;
     padding: 2px;
@@ -62,7 +69,7 @@ nav {
 .go_premium {
     color: rgb(5, 5, 65);
     background-color: white;
-    border-radius: 15%;
+    border-radius: 8px;
     width: 6.5vw;
     padding: 2px;
 }
