--- a/templates/index.html
+++ b/templates/index.html
@@ -24,10 +24,14 @@
         <main>
             <section class="weather_summary">
                 <div class="current_conditions">
-                    <h1>Berkeley, CA <span>As of 2:25 pm PST</span></h1>           
-                    <h1 class="temperature">55°</h1>
-                    <p class="conditions">Partly Cloudy</p>
+                {% if weather %}
+                    <h1>{{ weather.city }} <span>As of 2:25 pm PST</span></h1>           
+                    <h1 class="temperature">{{ weather.temperature }}°</h1>
+                    <p class="conditions">{{ weather.description }}</p>
                     <p class="high-low">Day 55° • Night 44°</p>
+                {% else %}
+                    <p>Could not fetch weather data.</p>
+                {% endif %}
                 </div>
                 <img class="current_conditions_image" src="/static/images/partly_cloudy.webp" alt="Partly Cloudy Icon">
             </section>
