can type another city name to fetch weather

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -92,7 +92,7 @@ nav {
 }
 
 .current_conditions_image {
-    width: 200px;
+    width: auto;
     margin-left: auto;
-    height: auto;
+    height: 150px;
 }
